Add more slides

--- a/S01-What-is-forecasting/01.3-Forecasting-Hello-World.slides.html
+++ b/S01-What-is-forecasting/01.3-Forecasting-Hello-World.slides.html
@@ -5,7 +5,7 @@
 <meta content="chrome=1" http-equiv="X-UA-Compatible"/>
 <meta content="yes" name="apple-mobile-web-app-capable"/>
 <meta content="black-translucent" name="apple-mobile-web-app-status-bar-style"/>
-<title>01.3-Forecasting-Hello-World slides</title><script src="file:///usr/share/javascript/jquery/jquery.min.js"></script><script src="file:///usr/share/javascript/requirejs/require.min.js"></script><script type="module">
+<title>01.3-Forecasting-Hello-World slides</title><script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script><script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.10/require.min.js"></script><script type="module">
   import mermaid from 'https://cdnjs.cloudflare.com/ajax/libs/mermaid/10.7.0/mermaid.esm.min.mjs';
   mermaid.initialize({ startOnLoad: true });
 </script>
@@ -7395,7 +7395,7 @@ main {
 }
 </style>
 <!-- Load mathjax -->
-<script src="file:///usr/share/javascript/mathjax/MathJax.js?config=TeX-AMS_CHTML-full,Safe"> </script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.7/latest.js?config=TeX-AMS_CHTML-full,Safe"> </script>
 <!-- MathJax configuration -->
 <script type="text/x-mathjax-config">
     init_mathjax = function() {
@@ -7549,7 +7549,7 @@ Successfully installed nixtla-0.7.0 orjson-3.11.3 tenacity-9.1.2 utilsforecast-0
 <div class="jp-InputPrompt jp-InputArea-prompt">In [3]:</div>
 <div class="jp-CodeMirrorEditor jp-Editor jp-InputArea-editor" data-type="inline">
 <div class="cm-editor cm-s-jupyter">
-<div class="highlight hl-ipython3"><pre><span></span><span class="kn">from</span> <span class="nn">nixtla</span> <span class="kn">import</span> <span class="n">NixtlaClient</span>
+<div class="highlight hl-ipython3"><pre><span></span><span class="kn">from</span><span class="w"> </span><span class="nn">nixtla</span><span class="w"> </span><span class="kn">import</span> <span class="n">NixtlaClient</span>
 
 <span class="n">nixtla_client</span> <span class="o">=</span> <span class="n">NixtlaClient</span><span class="p">(</span>
     <span class="n">api_key</span><span class="o">=</span><span class="s1">'ASK-TA-FOR-API'</span>
@@ -7600,7 +7600,7 @@ Successfully installed nixtla-0.7.0 orjson-3.11.3 tenacity-9.1.2 utilsforecast-0
 <div class="jp-InputPrompt jp-InputArea-prompt">In [5]:</div>
 <div class="jp-CodeMirrorEditor jp-Editor jp-InputArea-editor" data-type="inline">
 <div class="cm-editor cm-s-jupyter">
-<div class="highlight hl-ipython3"><pre><span></span><span class="kn">import</span> <span class="nn">pandas</span> <span class="k">as</span> <span class="nn">pd</span>
+<div class="highlight hl-ipython3"><pre><span></span><span class="kn">import</span><span class="w"> </span><span class="nn">pandas</span><span class="w"> </span><span class="k">as</span><span class="w"> </span><span class="nn">pd</span>
 
 <span class="n">df</span> <span class="o">=</span> <span class="n">pd</span><span class="o">.</span><span class="n">read_csv</span><span class="p">(</span><span class="s1">'../data/air_passengers_with_id.csv'</span><span class="p">)</span>
 <span class="n">df</span><span class="o">.</span><span class="n">head</span><span class="p">()</span>
@@ -8084,7 +8084,7 @@ Successfully installed antropy-0.1.9 arch-7.2.0 joblib-1.5.2 llvmlite-0.44.0 num
 <div class="jp-InputPrompt jp-InputArea-prompt">In [13]:</div>
 <div class="jp-CodeMirrorEditor jp-Editor jp-InputArea-editor" data-type="inline">
 <div class="cm-editor cm-s-jupyter">
-<div class="highlight hl-ipython3"><pre><span></span><span class="kn">from</span> <span class="nn">tsfeatures</span> <span class="kn">import</span> <span class="n">tsfeatures</span>
+<div class="highlight hl-ipython3"><pre><span></span><span class="kn">from</span><span class="w"> </span><span class="nn">tsfeatures</span><span class="w"> </span><span class="kn">import</span> <span class="n">tsfeatures</span>
 </pre></div>
 </div>
 </div>
