--- a/S01-What-is-forecasting/01B-Linux-Basics.slides.html
+++ b/S01-What-is-forecasting/01B-Linux-Basics.slides.html
@@ -7415,7 +7415,6 @@ main {
                     processEnvironments: true
                 },
                 displayAlign: 'center',
-                messageStyle: 'none',
                 CommonHTML: {
                     linebreaks: {
                     automatic: true
@@ -7845,7 +7844,7 @@ uuidd:x:121:130::/run/uuidd:/usr/sbin/nologin
 <div class="jp-InputPrompt jp-InputArea-prompt">In [8]:</div>
 <div class="jp-CodeMirrorEditor jp-Editor jp-InputArea-editor" data-type="inline">
 <div class="cm-editor cm-s-jupyter">
-<div class="highlight hl-bash"><pre><span></span>touch<span class="w"> </span>lifeng.txt<span class="w"> </span><span class="c1"># create a file </span>
+<div class="highlight hl-bash"><pre><span></span>touch<span class="w"> </span>lifeng.txt<span class="w"> </span><span class="c1"># create a file</span>
 </pre></div>
 </div>
 </div>
@@ -8085,7 +8084,7 @@ drwxr-xr-x  2 fli fli 4.0K Feb 15  2020 figures
 <div class="jp-InputPrompt jp-InputArea-prompt">In [15]:</div>
 <div class="jp-CodeMirrorEditor jp-Editor jp-InputArea-editor" data-type="inline">
 <div class="cm-editor cm-s-jupyter">
-<div class="highlight hl-bash"><pre><span></span>ls<span class="w"> </span>
+<div class="highlight hl-bash"><pre><span></span>ls
 </pre></div>
 </div>
 </div>
@@ -8150,7 +8149,7 @@ drwxr-xr-x  2 fli fli 4.0K Feb 15  2020 figures
 <div class="jp-InputPrompt jp-InputArea-prompt">In [17]:</div>
 <div class="jp-CodeMirrorEditor jp-Editor jp-InputArea-editor" data-type="inline">
 <div class="cm-editor cm-s-jupyter">
-<div class="highlight hl-bash"><pre><span></span><span class="nb">cd</span><span class="w"> </span>..<span class="w"> </span><span class="c1"># swtich to parent directory </span>
+<div class="highlight hl-bash"><pre><span></span><span class="nb">cd</span><span class="w"> </span>..<span class="w"> </span><span class="c1"># swtich to parent directory</span>
 </pre></div>
 </div>
 </div>
@@ -8848,7 +8847,7 @@ lrwxrwxrwx 1 root root          25 Sep 22  2019 aclocal -&gt; /etc/alternatives/
 <div class="jp-InputPrompt jp-InputArea-prompt">In [31]:</div>
 <div class="jp-CodeMirrorEditor jp-Editor jp-InputArea-editor" data-type="inline">
 <div class="cm-editor cm-s-jupyter">
-<div class="highlight hl-bash"><pre><span></span>ls<span class="w"> </span>-l<span class="w"> </span>/usr/bin<span class="w"> </span><span class="p">|</span><span class="w"> </span>wc<span class="w"> </span>
+<div class="highlight hl-bash"><pre><span></span>ls<span class="w"> </span>-l<span class="w"> </span>/usr/bin<span class="w"> </span><span class="p">|</span><span class="w"> </span>wc
 </pre></div>
 </div>
 </div>
