--- a/S01-What-is-forecasting/01.3-Forecasting-Hello-World.slides.html
+++ b/S01-What-is-forecasting/01.3-Forecasting-Hello-World.slides.html
@@ -7415,7 +7415,6 @@ main {
                     processEnvironments: true
                 },
                 displayAlign: 'center',
-                messageStyle: 'none',
                 CommonHTML: {
                     linebreaks: {
                     automatic: true
@@ -7549,7 +7548,7 @@ Successfully installed nixtla-0.7.0 orjson-3.11.3 tenacity-9.1.2 utilsforecast-0
 <div class="jp-InputPrompt jp-InputArea-prompt">In [3]:</div>
 <div class="jp-CodeMirrorEditor jp-Editor jp-InputArea-editor" data-type="inline">
 <div class="cm-editor cm-s-jupyter">
-<div class="highlight hl-ipython3"><pre><span></span><span class="kn">from</span><span class="w"> </span><span class="nn">nixtla</span><span class="w"> </span><span class="kn">import</span> <span class="n">NixtlaClient</span>
+<div class="highlight hl-ipython3"><pre><span></span><span class="kn">from</span> <span class="nn">nixtla</span> <span class="kn">import</span> <span class="n">NixtlaClient</span>
 
 <span class="n">nixtla_client</span> <span class="o">=</span> <span class="n">NixtlaClient</span><span class="p">(</span>
     <span class="n">api_key</span><span class="o">=</span><span class="s1">'ASK-TA-FOR-API'</span>
@@ -7600,7 +7599,7 @@ Successfully installed nixtla-0.7.0 orjson-3.11.3 tenacity-9.1.2 utilsforecast-0
 <div class="jp-InputPrompt jp-InputArea-prompt">In [5]:</div>
 <div class="jp-CodeMirrorEditor jp-Editor jp-InputArea-editor" data-type="inline">
 <div class="cm-editor cm-s-jupyter">
-<div class="highlight hl-ipython3"><pre><span></span><span class="kn">import</span><span class="w"> </span><span class="nn">pandas</span><span class="w"> </span><span class="k">as</span><span class="w"> </span><span class="nn">pd</span>
+<div class="highlight hl-ipython3"><pre><span></span><span class="kn">import</span> <span class="nn">pandas</span> <span class="k">as</span> <span class="nn">pd</span>
 
 <span class="n">df</span> <span class="o">=</span> <span class="n">pd</span><span class="o">.</span><span class="n">read_csv</span><span class="p">(</span><span class="s1">'../data/air_passengers_with_id.csv'</span><span class="p">)</span>
 <span class="n">df</span><span class="o">.</span><span class="n">head</span><span class="p">()</span>
@@ -8084,7 +8083,7 @@ Successfully installed antropy-0.1.9 arch-7.2.0 joblib-1.5.2 llvmlite-0.44.0 num
 <div class="jp-InputPrompt jp-InputArea-prompt">In [13]:</div>
 <div class="jp-CodeMirrorEditor jp-Editor jp-InputArea-editor" data-type="inline">
 <div class="cm-editor cm-s-jupyter">
-<div class="highlight hl-ipython3"><pre><span></span><span class="kn">from</span><span class="w"> </span><span class="nn">tsfeatures</span><span class="w"> </span><span class="kn">import</span> <span class="n">tsfeatures</span>
+<div class="highlight hl-ipython3"><pre><span></span><span class="kn">from</span> <span class="nn">tsfeatures</span> <span class="kn">import</span> <span class="n">tsfeatures</span>
 </pre></div>
 </div>
 </div>
