--- a/S03-Forecast-Evaluation/03.3-Point-Forecast-Evaluation.slides.html
+++ b/S03-Forecast-Evaluation/03.3-Point-Forecast-Evaluation.slides.html
@@ -7415,7 +7415,6 @@ main {
                     processEnvironments: true
                 },
                 displayAlign: 'center',
-                messageStyle: 'none',
                 CommonHTML: {
                     linebreaks: {
                     automatic: true
@@ -7471,11 +7470,11 @@ main {
 <div class="jp-CodeMirrorEditor jp-Editor jp-InputArea-editor" data-type="inline">
 <div class="cm-editor cm-s-jupyter">
 <div class="highlight hl-ipython3"><pre><span></span><span class="c1"># 0) 导入与初始化</span>
-<span class="kn">import</span><span class="w"> </span><span class="nn">numpy</span><span class="w"> </span><span class="k">as</span><span class="w"> </span><span class="nn">np</span>
-<span class="kn">import</span><span class="w"> </span><span class="nn">pandas</span><span class="w"> </span><span class="k">as</span><span class="w"> </span><span class="nn">pd</span>
-<span class="kn">from</span><span class="w"> </span><span class="nn">nixtla</span><span class="w"> </span><span class="kn">import</span> <span class="n">NixtlaClient</span>
-<span class="kn">from</span><span class="w"> </span><span class="nn">utilsforecast.losses</span><span class="w"> </span><span class="kn">import</span> <span class="n">mae</span><span class="p">,</span> <span class="n">mse</span><span class="p">,</span> <span class="n">rmse</span><span class="p">,</span> <span class="n">mape</span><span class="p">,</span> <span class="n">smape</span>
-<span class="kn">from</span><span class="w"> </span><span class="nn">utilsforecast.evaluation</span><span class="w"> </span><span class="kn">import</span> <span class="n">evaluate</span>
+<span class="kn">import</span> <span class="nn">numpy</span> <span class="k">as</span> <span class="nn">np</span>
+<span class="kn">import</span> <span class="nn">pandas</span> <span class="k">as</span> <span class="nn">pd</span>
+<span class="kn">from</span> <span class="nn">nixtla</span> <span class="kn">import</span> <span class="n">NixtlaClient</span>
+<span class="kn">from</span> <span class="nn">utilsforecast.losses</span> <span class="kn">import</span> <span class="n">mae</span><span class="p">,</span> <span class="n">mse</span><span class="p">,</span> <span class="n">rmse</span><span class="p">,</span> <span class="n">mape</span><span class="p">,</span> <span class="n">smape</span>
+<span class="kn">from</span> <span class="nn">utilsforecast.evaluation</span> <span class="kn">import</span> <span class="n">evaluate</span>
 
 <span class="n">nixtla</span> <span class="o">=</span> <span class="n">NixtlaClient</span><span class="p">(</span><span class="n">api_key</span><span class="o">=</span><span class="s1">'YOUR-API-KEY'</span><span class="p">)</span>  <span class="c1"># 初始化客户端</span>
 <span class="n">FREQ</span> <span class="o">=</span> <span class="s2">"MS"</span>  <span class="c1"># 月度</span>
@@ -7534,11 +7533,11 @@ main {
 <div class="jp-CodeMirrorEditor jp-Editor jp-InputArea-editor" data-type="inline">
 <div class="cm-editor cm-s-jupyter">
 <div class="highlight hl-ipython3"><pre><span></span><span class="c1"># 2) 指标函数：ME / MPE（%）</span>
-<span class="k">def</span><span class="w"> </span><span class="nf">me</span><span class="p">(</span><span class="n">y_true</span><span class="p">,</span> <span class="n">y_pred</span><span class="p">):</span> <span class="c1">#计算预测值与真实值的平均误差</span>
+<span class="k">def</span> <span class="nf">me</span><span class="p">(</span><span class="n">y_true</span><span class="p">,</span> <span class="n">y_pred</span><span class="p">):</span> <span class="c1">#计算预测值与真实值的平均误差</span>
     <span class="n">y_true</span> <span class="o">=</span> <span class="n">np</span><span class="o">.</span><span class="n">asarray</span><span class="p">(</span><span class="n">y_true</span><span class="p">,</span> <span class="nb">float</span><span class="p">);</span> <span class="n">y_pred</span> <span class="o">=</span> <span class="n">np</span><span class="o">.</span><span class="n">asarray</span><span class="p">(</span><span class="n">y_pred</span><span class="p">,</span> <span class="nb">float</span><span class="p">)</span>
     <span class="k">return</span> <span class="nb">float</span><span class="p">(</span><span class="n">np</span><span class="o">.</span><span class="n">mean</span><span class="p">(</span><span class="n">y_true</span> <span class="o">-</span> <span class="n">y_pred</span><span class="p">))</span>
 
-<span class="k">def</span><span class="w"> </span><span class="nf">mpe</span><span class="p">(</span><span class="n">y_true</span><span class="p">,</span> <span class="n">y_pred</span><span class="p">):</span> <span class="c1">#计算预测值与真实值的百分比误差</span>
+<span class="k">def</span> <span class="nf">mpe</span><span class="p">(</span><span class="n">y_true</span><span class="p">,</span> <span class="n">y_pred</span><span class="p">):</span> <span class="c1">#计算预测值与真实值的百分比误差</span>
     <span class="n">y_true</span> <span class="o">=</span> <span class="n">np</span><span class="o">.</span><span class="n">asarray</span><span class="p">(</span><span class="n">y_true</span><span class="p">,</span> <span class="nb">float</span><span class="p">);</span> <span class="n">y_pred</span> <span class="o">=</span> <span class="n">np</span><span class="o">.</span><span class="n">asarray</span><span class="p">(</span><span class="n">y_pred</span><span class="p">,</span> <span class="nb">float</span><span class="p">)</span>
     <span class="n">mask</span> <span class="o">=</span> <span class="n">y_true</span> <span class="o">!=</span> <span class="mi">0</span>
     <span class="k">return</span> <span class="nb">float</span><span class="p">(</span><span class="n">np</span><span class="o">.</span><span class="n">mean</span><span class="p">((</span><span class="n">y_true</span><span class="p">[</span><span class="n">mask</span><span class="p">]</span> <span class="o">-</span> <span class="n">y_pred</span><span class="p">[</span><span class="n">mask</span><span class="p">])</span> <span class="o">/</span> <span class="n">y_true</span><span class="p">[</span><span class="n">mask</span><span class="p">])</span> <span class="o">*</span> <span class="mf">100.0</span><span class="p">)</span> <span class="k">if</span> <span class="n">np</span><span class="o">.</span><span class="n">any</span><span class="p">(</span><span class="n">mask</span><span class="p">)</span> <span class="k">else</span> <span class="n">np</span><span class="o">.</span><span class="n">nan</span>
@@ -7568,7 +7567,7 @@ main {
 <div class="cm-editor cm-s-jupyter">
 <div class="highlight hl-ipython3"><pre><span></span><span class="c1"># 3) 公共小工具</span>
 <span class="n">_METRICS</span> <span class="o">=</span> <span class="p">[</span><span class="n">mae</span><span class="p">,</span> <span class="n">mse</span><span class="p">,</span> <span class="n">rmse</span><span class="p">,</span> <span class="n">mape</span><span class="p">,</span> <span class="n">smape</span><span class="p">]</span>
-<span class="k">def</span><span class="w"> </span><span class="nf">_eval_df</span><span class="p">(</span><span class="n">df_like</span><span class="p">):</span>
+<span class="k">def</span> <span class="nf">_eval_df</span><span class="p">(</span><span class="n">df_like</span><span class="p">):</span>
     <span class="n">ev</span> <span class="o">=</span> <span class="n">evaluate</span><span class="p">(</span><span class="n">df</span><span class="o">=</span><span class="n">df_like</span><span class="p">,</span> <span class="n">metrics</span><span class="o">=</span><span class="n">_METRICS</span><span class="p">,</span> <span class="n">models</span><span class="o">=</span><span class="p">[</span><span class="s2">"TimeGPT"</span><span class="p">],</span> 
                   <span class="n">time_col</span><span class="o">=</span><span class="s2">"ds"</span><span class="p">,</span> <span class="n">target_col</span><span class="o">=</span><span class="s2">"y"</span><span class="p">)</span><span class="o">.</span><span class="n">set_index</span><span class="p">(</span><span class="s2">"metric"</span><span class="p">)[</span><span class="s2">"TimeGPT"</span><span class="p">]</span>
     <span class="n">y</span><span class="p">,</span> <span class="n">yhat</span> <span class="o">=</span> <span class="n">df_like</span><span class="p">[</span><span class="s2">"y"</span><span class="p">]</span><span class="o">.</span><span class="n">values</span><span class="p">,</span> <span class="n">df_like</span><span class="p">[</span><span class="s2">"TimeGPT"</span><span class="p">]</span><span class="o">.</span><span class="n">values</span><span class="p">;</span> <span class="k">return</span> <span class="n">ev</span><span class="p">,</span> <span class="n">y</span><span class="p">,</span> <span class="n">yhat</span>
@@ -7586,7 +7585,7 @@ main {
 <div class="jp-CodeMirrorEditor jp-Editor jp-InputArea-editor" data-type="inline">
 <div class="cm-editor cm-s-jupyter">
 <div class="highlight hl-ipython3"><pre><span></span><span class="c1"># 4) 函数1：单模型的 Hold-out 指标</span>
-<span class="k">def</span><span class="w"> </span><span class="nf">holdout_metrics</span><span class="p">(</span><span class="n">df</span><span class="p">,</span> <span class="n">model_name</span><span class="p">,</span> <span class="n">H_TEST</span><span class="o">=</span><span class="mi">12</span><span class="p">):</span>
+<span class="k">def</span> <span class="nf">holdout_metrics</span><span class="p">(</span><span class="n">df</span><span class="p">,</span> <span class="n">model_name</span><span class="p">,</span> <span class="n">H_TEST</span><span class="o">=</span><span class="mi">12</span><span class="p">):</span>
     <span class="c1"># 划分训练集和测试集</span>
     <span class="n">train</span><span class="p">,</span> <span class="n">test</span> <span class="o">=</span> <span class="n">df</span><span class="o">.</span><span class="n">iloc</span><span class="p">[:</span><span class="o">-</span><span class="n">H_TEST</span><span class="p">],</span> <span class="n">df</span><span class="o">.</span><span class="n">iloc</span><span class="p">[</span><span class="o">-</span><span class="n">H_TEST</span><span class="p">:]</span>
     <span class="c1"># 使用 Nixtla 模型进行预测，并与真实测试数据按日期合并</span>
@@ -7611,7 +7610,7 @@ main {
 <div class="jp-CodeMirrorEditor jp-Editor jp-InputArea-editor" data-type="inline">
 <div class="cm-editor cm-s-jupyter">
 <div class="highlight hl-ipython3"><pre><span></span><span class="c1"># 5) 函数2：单模型的 Rolling(T+1..T+5) 平均指标</span>
-<span class="k">def</span><span class="w"> </span><span class="nf">rolling_metrics</span><span class="p">(</span><span class="n">df</span><span class="p">,</span> <span class="n">model_name</span><span class="p">,</span> <span class="n">H</span><span class="o">=</span><span class="mi">5</span><span class="p">,</span> <span class="n">n_windows</span><span class="o">=</span><span class="mi">10</span><span class="p">):</span>
+<span class="k">def</span> <span class="nf">rolling_metrics</span><span class="p">(</span><span class="n">df</span><span class="p">,</span> <span class="n">model_name</span><span class="p">,</span> <span class="n">H</span><span class="o">=</span><span class="mi">5</span><span class="p">,</span> <span class="n">n_windows</span><span class="o">=</span><span class="mi">10</span><span class="p">):</span>
     <span class="c1"># 生成多次滚动窗口预测结果，并按时间排序</span>
     <span class="n">cv</span> <span class="o">=</span> <span class="n">nixtla</span><span class="o">.</span><span class="n">cross_validation</span><span class="p">(</span><span class="n">df</span><span class="o">=</span><span class="n">df</span><span class="p">,</span> <span class="n">h</span><span class="o">=</span><span class="n">H</span><span class="p">,</span> <span class="n">n_windows</span><span class="o">=</span><span class="n">n_windows</span><span class="p">,</span> <span class="n">freq</span><span class="o">=</span><span class="n">FREQ</span><span class="p">,</span> 
                                  <span class="n">model</span><span class="o">=</span><span class="n">model_name</span><span class="p">)</span><span class="o">.</span><span class="n">sort_values</span><span class="p">([</span><span class="s2">"unique_id"</span><span class="p">,</span><span class="s2">"cutoff"</span><span class="p">,</span><span class="s2">"ds"</span><span class="p">])</span><span class="o">.</span><span class="n">reset_index</span><span class="p">(</span><span class="n">drop</span><span class="o">=</span><span class="kc">True</span><span class="p">)</span>
@@ -7639,7 +7638,7 @@ main {
 <div class="jp-CodeMirrorEditor jp-Editor jp-InputArea-editor" data-type="inline">
 <div class="cm-editor cm-s-jupyter">
 <div class="highlight hl-ipython3"><pre><span></span><span class="c1"># 6) 函数3：对比两种 TimeGPT 模型</span>
-<span class="k">def</span><span class="w"> </span><span class="nf">compare_models</span><span class="p">(</span><span class="n">df</span><span class="p">,</span> <span class="n">model_list</span><span class="o">=</span><span class="n">MODELS</span><span class="p">,</span> <span class="n">H_TEST</span><span class="o">=</span><span class="mi">12</span><span class="p">,</span> <span class="n">H</span><span class="o">=</span><span class="mi">5</span><span class="p">,</span> <span class="n">n_windows</span><span class="o">=</span><span class="mi">10</span><span class="p">):</span>
+<span class="k">def</span> <span class="nf">compare_models</span><span class="p">(</span><span class="n">df</span><span class="p">,</span> <span class="n">model_list</span><span class="o">=</span><span class="n">MODELS</span><span class="p">,</span> <span class="n">H_TEST</span><span class="o">=</span><span class="mi">12</span><span class="p">,</span> <span class="n">H</span><span class="o">=</span><span class="mi">5</span><span class="p">,</span> <span class="n">n_windows</span><span class="o">=</span><span class="mi">10</span><span class="p">):</span>
     <span class="c1"># Hold-out</span>
     <span class="n">hold_rows</span> <span class="o">=</span> <span class="p">[</span><span class="n">holdout_metrics</span><span class="p">(</span><span class="n">df</span><span class="p">,</span> <span class="n">m</span><span class="p">,</span> <span class="n">H_TEST</span><span class="p">)</span> <span class="k">for</span> <span class="n">m</span> <span class="ow">in</span> <span class="n">model_list</span><span class="p">]</span>
     <span class="n">holdout_df</span> <span class="o">=</span> <span class="n">pd</span><span class="o">.</span><span class="n">DataFrame</span><span class="p">(</span><span class="n">hold_rows</span><span class="p">)</span><span class="o">.</span><span class="n">sort_values</span><span class="p">(</span><span class="s2">"MAE"</span><span class="p">)</span><span class="o">.</span><span class="n">round</span><span class="p">(</span><span class="mi">3</span><span class="p">)</span>
